# OpenMM2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GameDirectory.txt  OpenMM2.sln  README.md  appveyor.yml  build.bat  clean.bat  cmake.bat  mm2.cfg  premake.bat
src/: AudManager.cpp  CMakeLists.txt  DirSnd.cpp  Font.cpp  GameLoop.cpp  HashTable.cpp  Hooking.cpp  Logging.cpp  MMString.cpp  Main.cpp  Stream.cpp  Timer.cpp  asCamera.cpp  asCullManager.cpp  asLinearCS.cpp  asNetwork.cpp  asNode.cpp  asRoot.cpp  d3dpipe.cpp  datArgParser.cpp  datAssetManager.cpp  datCallback.cpp  datOutput.cpp  datStack.cpp  dllmain.cpp  eqEventHandler.cpp  gfxBitmap.cpp  gfxImage.cpp  gfxInterface.cpp  gfxPipeline.cpp  gfxRenderState.cpp  gfxTexture.cpp  hooking.cpp  hooking.h  ioInput.cpp  ioJoystick.cpp  localize.cpp  lvlProgress.cpp  memMemoryAllocator.cpp  memSafeHeap.cpp  (+14 more)
src/ageaudio/: CMakeLists.txt  ageaudio.cpp  ageaudio.h  agesound.cpp  agesound.h  aud3dambientobject.cpp  aud3dambientobject.h  aud3dambobjcontainer.cpp  aud3dambobjcontainer.h  aud3dobject.cpp  aud3dobject.h  aud3dobjectmanager.cpp  aud3dobjectmanager.h  aud3dsamplewrapper.cpp  aud3dsamplewrapper.h  audcreature.cpp  audcreature.h  audcreatureavoid.cpp  audcreatureavoid.h  audcreaturecontainer.cpp  audcreaturecontainer.h  audcreatureimpact.cpp  audcreatureimpact.h  audimpact.cpp  audimpact.h  audimpactdata.cpp  audimpactdata.h  audspeech.cpp  audspeech.h  audspeechdata.cpp  audspeechdata.h
src/ai/: ArrayList.cpp  ArrayList.h  CMakeLists.txt  aiAmbientActiveData.cpp  aiAmbientActiveData.h  aiBanger.cpp  aiBanger.h  aiCTFRacer.cpp  aiCTFRacer.h  aiCableCar.cpp  aiCableCar.h  aiCityData.cpp  aiCityData.h  aiData.cpp  aiData.h  aiGoalAvoidPlayer.cpp  aiGoalAvoidPlayer.h  aiGoalCollision.cpp  aiGoalCollision.h  aiGoalRandomDrive.cpp  aiGoalRandomDrive.h  aiGoalRegainRail.cpp  aiGoalRegainRail.h  aiIntersection.cpp  aiIntersection.h  aiMap.cpp  aiMap.h  aiPath.cpp  aiPath.h  aiPedestrian.cpp  aiPedestrian.h  aiPoliceForce.cpp  aiPoliceForce.h  aiPoliceOfficer.cpp  aiPoliceOfficer.h  aiRailSet.cpp  aiRailSet.h  aiRouteRacer.cpp  aiRouteRacer.h  aiStuck.cpp  (+21 more)
src/aud/: CMakeLists.txt  adpcm_decode.cpp  adpcm_decode.h  cd.h  cdobject.cpp  cdobject.h  control.cpp  control.h  dirsnd.cpp  dirsnd.h  echoeffect.cpp  echoeffect.h  effectbase.cpp  effectbase.h  filesystem.cpp  filesystem.h  fx.cpp  fx.h  head.cpp  head.h  list.cpp  list.h  manager.cpp  manager.h  memmgr.cpp  memmgr.h  midi.cpp  midi.h  mixer.cpp  mixer.h  object.cpp  object.h  redbook.cpp  redbook.h  sound.cpp  sound.h  soundbank.cpp  soundbank.h  soundbuffer.cpp  soundbuffer.h  (+4 more)
src/banger/: CMakeLists.txt  active.cpp  active.h  banger.cpp  banger.h  data.cpp  data.h  glass.cpp  glass.h  tree.cpp  tree.h
src/bank/: CMakeLists.txt  bank.cpp  bank.h  bklocbank.cpp  bklocbank.h  bklocmgr.cpp  bklocmgr.h  bklocwidget.cpp  bklocwidget.h  bkmgr.cpp  bkmgr.h  bkwinbank.cpp  bkwinbank.h  bkwinbutton.cpp  bkwinbutton.h  bkwincombo.cpp  bkwincombo.h  bkwingroup.cpp  bkwingroup.h  bkwinmenu.cpp  bkwinmenu.h  bkwinmgr.cpp  bkwinmgr.h  bkwinslider.cpp  bkwinslider.h  bkwintext.cpp  bkwintext.h  bkwintoggle.cpp  bkwintoggle.h  bkwintree.cpp  bkwintree.h  bkwinwidget.cpp  bkwinwidget.h  button.h  color.cpp  color.h  combo.cpp  combo.h  group.cpp  group.h  (+7 more)
src/camera/: CMakeLists.txt  aics.cpp  aics.h  appcs.cpp  appcs.h  basecs.cpp  basecs.h  carcs.cpp  carcs.h  pointcs.cpp  pointcs.h  polarcs.cpp  polarcs.h  postcs.cpp  postcs.h  povcs.cpp  povcs.h  precs.cpp  precs.h  spline.cpp  spline.h  trackcs.cpp  trackcs.h  transitioncs.cpp  transitioncs.h  viewcs.cpp  viewcs.h
src/city/: CMakeLists.txt  ai.cpp  ai.h  citylevel.cpp  citylevel.h  propulate.cpp  propulate.h  psdl.cpp  psdl.h  state.cpp  state.h  texvar.cpp  texvar.h
src/core/: CMakeLists.txt  assert.cpp  assert.h  file.cpp  file.h  output.cpp  output.h  stream.cpp  stream.h
src/cranimation/: CMakeLists.txt  animation.cpp  animation.h  frame.cpp  frame.h
src/crbody/: CMakeLists.txt  armdata.cpp  armdata.h  bodydata.cpp  bodydata.h  headdata.cpp  headdata.h  ikgoal.cpp  ikgoal.h  kinematics.cpp  kinematics.h  legdata.cpp  legdata.h  spinedata.cpp  spinedata.h
src/crskeleton/: CMakeLists.txt  bone.cpp  bone.h  bonedata.cpp  bonedata.h  skeldata.cpp  skeldata.h  skeleton.cpp  skeleton.h
src/data/: CMakeLists.txt  args.cpp  args.h  asset.cpp  asset.h  base.cpp  base.h  callback.cpp  callback.h  debuglog.cpp  debuglog.h  hash.cpp  hash.h  memory.cpp  memory.h  memstream.cpp  memstream.h  refcount.cpp  refcount.h  replay.cpp  replay.h  stack.cpp  stack.h  string.cpp  string.h  timemgr.cpp  timemgr.h  timer.cpp  timer.h  token.cpp  token.h  username.cpp  username.h
src/dgragdoll/: CMakeLists.txt  link.cpp  link.h  linkdata.cpp  linkdata.h  ragdoll.cpp  ragdoll.h  ragdolldata.cpp  ragdolldata.h
src/directmusic/: CMakeLists.txt  cfilestream.cpp  cfilestream.h  cmemstream.cpp  cmemstream.h  dmusicmanager.cpp  dmusicmanager.h  dmusicobject.cpp  dmusicobject.h  dmusicwavebuffer.cpp  dmusicwavebuffer.h  loader.cpp  loader.h  segmentwrapper.cpp  segmentwrapper.h
src/djpeg/: CMakeLists.txt  loadimg.cpp  loadimg.h
src/effects/: CMakeLists.txt  birth.cpp  birth.h  card2d.cpp  card2d.h  glassptx.cpp  glassptx.h  linespark.cpp  linespark.h  ptx.cpp  ptx.h  shard.cpp  shard.h  texeldamage.cpp  texeldamage.h
src/gfx/: CMakeLists.txt  bank.h  buildpkt.cpp  buildpkt.h  d3dpipe.cpp  d3dpipe.h  font.cpp  font.h  gettex.cpp  gettex.h  image.cpp  image.h  loadimg.cpp  loadimg.h  packet.cpp  packet.h  pipecom.cpp  pipecom.h  renderer.cpp  renderer.h  rstate.cpp  rstate.h  rstateflush.cpp  rstateflush.h  sdlpipe.cpp  sdlpipe.h  stats.h  swdev.cpp  swdev.h  texmovie.cpp  texmovie.h  texture.cpp  texture.h  tristrip.cpp  tristrip.h  viewport.cpp  viewport.h  winpipe.cpp  winpipe.h  winpriv.cpp  (+1 more)
src/gizmo/: CMakeLists.txt  bridge.cpp  bridge.h  bridgeaudio.cpp  bridgeaudio.h  ferry.cpp  ferry.h  gizmoinst.cpp  gizmoinst.h  parkedcar.cpp  parkedcar.h  pathspline.cpp  pathspline.h  sailboat.cpp  sailboat.h  train.cpp  train.h
(+1852 files in other folders)
