cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

add_library(ai STATIC
    ArrayList.cpp
    ArrayList.h
    aiAmbientActiveData.cpp
    aiAmbientActiveData.h
    aiBanger.cpp
    aiBanger.h
    aiCTFRacer.cpp
    aiCTFRacer.h
    aiCableCar.cpp
    aiCableCar.h
    aiCityData.cpp
    aiCityData.h
    aiData.cpp
    aiData.h
    aiGoalAvoidPlayer.cpp
    aiGoalAvoidPlayer.h
    aiGoalCollision.cpp
    aiGoalCollision.h
    aiGoalRandomDrive.cpp
    aiGoalRandomDrive.h
    aiGoalRegainRail.cpp
    aiGoalRegainRail.h
    aiIntersection.cpp
    aiIntersection.h
    aiMap.cpp
    aiMap.h
    aiPath.cpp
    aiPath.h
    aiPedestrian.cpp
    aiPedestrian.h
    aiPoliceForce.cpp
    aiPoliceForce.h
    aiPoliceOfficer.cpp
    aiPoliceOfficer.h
    aiRailSet.cpp
    aiRailSet.h
    aiRouteRacer.cpp
    aiRouteRacer.h
    aiStuck.cpp
    aiStuck.h
    aiSubway.cpp
    aiSubway.h
    aiTrafficLight.cpp
    aiTrafficLight.h
    aiVehicle.cpp
    aiVehicle.h
    aiVehicleAmbient.cpp
    aiVehicleAmbient.h
    aiVehicleMGR.cpp
    aiVehicleMGR.h
    aiVehiclePhysics.cpp
    aiVehiclePhysics.h
    aiVehiclePlayer.cpp
    aiVehiclePlayer.h
    aiVehicleSpline.cpp
    aiVehicleSpline.h
    aipedaudio.cpp
    aipedaudio.h
    mcHookman.cpp
    mcHookman.h
)

target_link_libraries(ai hooking)
