add_library(mmgame OBJECT
    cd.cpp
    cd.h
    dash.cpp
    dash.h
    ebola.cpp
    ebola.h
    game.cpp
    game.h
    gameman.cpp
    gameman.h
    gamemulti.cpp
    gamemulti.h
    gamesingle.cpp
    gamesingle.h
    gauge.cpp
    gauge.h
    hud.cpp
    hud.h
    hudmap.cpp
    hudmap.h
    icons.cpp
    icons.h
    interface.cpp
    interface.h
    mirror.cpp
    mirror.h
    mmambientaudio.cpp
    mmambientaudio.h
    mmgamemusicdata.cpp
    mmgamemusicdata.h
    mmsingleracemusicdata.cpp
    mmsingleracemusicdata.h
    mmsingleroammusicdata.cpp
    mmsingleroammusicdata.h
    multiblitz.cpp
    multiblitz.h
    multicircuit.cpp
    multicircuit.h
    multicr.cpp
    multicr.h
    multirace.cpp
    multirace.h
    multiroam.cpp
    multiroam.h
    netobject.cpp
    netobject.h
    player.cpp
    player.h
    popup.cpp
    popup.h
    rainaudio.cpp
    rainaudio.h
    replay.cpp
    replay.h
    roadff.cpp
    roadff.h
    singleblitz.cpp
    singleblitz.h
    singlecircuit.cpp
    singlecircuit.h
    singlerace.cpp
    singlerace.h
    singleroam.cpp
    singleroam.h
    singlestunt.cpp
    singlestunt.h
    viewmgr.cpp
    viewmgr.h
    waypoints.cpp
    waypoints.h
    wphud.cpp
    wphud.h
    wpinst.cpp
    wpinst.h
    wpobject.cpp
    wpobject.h
)

target_link_libraries(mmgame hooking)
