cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

add_library(mmui STATIC
    about.cpp
    about.h
    audio.cpp
    audio.h
    ccintro.cpp
    ccintro.h
    control.cpp
    control.h
    controlbase.cpp
    controlbase.h
    crash.cpp
    crash.h
    ctrlcus.cpp
    ctrlcus.h
    dlg_city2.cpp
    dlg_city2.h
    dlg_ctrl.cpp
    dlg_ctrl.h
    dlg_drec.cpp
    dlg_drec.h
    dlg_eject.cpp
    dlg_eject.h
    dlg_hoff.cpp
    dlg_hoff.h
    dlg_host.cpp
    dlg_host.h
    dlg_msg.cpp
    dlg_msg.h
    dlg_newp.cpp
    dlg_newp.h
    dlg_password.cpp
    dlg_password.h
    dlg_redit.cpp
    dlg_redit.h
    dlg_renv.cpp
    dlg_renv.h
    dlg_replay.cpp
    dlg_replay.h
    dlg_serial.cpp
    dlg_serial.h
    dlg_tcpip.cpp
    dlg_tcpip.h
    graphics.cpp
    graphics.h
    main.cpp
    main.h
    netarena.cpp
    netarena.h
    netselect.cpp
    netselect.h
    options.cpp
    options.h
    optionsbase.cpp
    optionsbase.h
    pu_audio.cpp
    pu_audio.h
    pu_chat.cpp
    pu_chat.h
    pu_control.cpp
    pu_control.h
    pu_debug.cpp
    pu_debug.h
    pu_exit.cpp
    pu_exit.h
    pu_graphics.cpp
    pu_graphics.h
    pu_key.cpp
    pu_key.h
    pu_main.cpp
    pu_main.h
    pu_menu.cpp
    pu_menu.h
    pu_options.cpp
    pu_options.h
    pu_quit.cpp
    pu_quit.h
    pu_replay.cpp
    pu_replay.h
    pu_results.cpp
    pu_results.h
    pu_roster.cpp
    pu_roster.h
    pu_rplio.cpp
    pu_rplio.h
    race.cpp
    race.h
    racebase.cpp
    racebase.h
    racehost.cpp
    racehost.h
    vehicle.cpp
    vehicle.h
    vselect.cpp
    vselect.h
    vshow.cpp
    vshow.h
)

target_link_libraries(mmui hooking)
