add_library(vehicle OBJECT
    aero.cpp
    aero.h
    aiambientvehicleaudio.cpp
    aiambientvehicleaudio.h
    aicablecaraudio.cpp
    aicablecaraudio.h
    aicablecaraudiodata.cpp
    aicablecaraudiodata.h
    aiengineaudio.cpp
    aiengineaudio.h
    aisubwayaudio.cpp
    aisubwayaudio.h
    axle.cpp
    axle.h
    bound.cpp
    bound.h
    breakable.cpp
    breakable.h
    caraudio.cpp
    caraudio.h
    caraudiocontainer.cpp
    caraudiocontainer.h
    cardamage.cpp
    cardamage.h
    carmodel.cpp
    carmodel.h
    carsim.cpp
    carsim.h
    drivetrain.cpp
    drivetrain.h
    engine.cpp
    engine.h
    engineaudio.cpp
    engineaudio.h
    enginesamplewrapper.cpp
    enginesamplewrapper.h
    feedback.cpp
    feedback.h
    gyro.cpp
    gyro.h
    hornaudio.cpp
    hornaudio.h
    hornaudiotiming.cpp
    hornaudiotiming.h
    nitrocaraudio.cpp
    nitrocaraudio.h
    policecaraudio.cpp
    policecaraudio.h
    semicaraudio.cpp
    semicaraudio.h
    siren.cpp
    siren.h
    splash.cpp
    splash.h
    stuck.cpp
    stuck.h
    surfaceaudio.cpp
    surfaceaudio.h
    surfaceaudiodata.cpp
    surfaceaudiodata.h
    suspension.cpp
    suspension.h
    trailer.cpp
    trailer.h
    transmission.cpp
    transmission.h
    wheel.cpp
    wheel.h
    wheelcheap.cpp
    wheelcheap.h
    wheelptx.cpp
    wheelptx.h
)

target_link_libraries(vehicle hooking)
